fix: Alignment issues fixed for Root

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
 #root {
   margin: 0px;
   padding: 0px;
-  text-align: center;
 }
 
 html, body {
